Add loading text to job pages

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -151,7 +151,9 @@ h6,
 .text-76px {
   font-size: toRem(76);
 }
-
+.text-36px {
+  font-size: toRem(36);
+}
 .text-28px {
   font-size: toRem(28) !important;
 }
