--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -271,6 +271,10 @@
   overflow: hidden;
 }
 
+.b-r-0 {
+  border-radius: 0 !important;
+}
+
 .object-fit-fill img {
   object-fit: fill !important;
 }
