style: brandlayout heading position

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -34,7 +34,6 @@
     .heading {
       max-width: unset;
       margin-bottom: unset;
-     
     }
     .textContent {
       text-align: center;
@@ -48,6 +47,12 @@
     max-width: 39.5rem;
     margin-top: 1rem;
   }
+  .brandHeading {
+    margin-left: -.1rem;
+    @include desktop{
+      margin-left:-.2rem;
+    }
+  }
   .textContent {
     display: flex;
     flex-direction: column;
@@ -59,12 +64,12 @@
     // Overflow fallback for Safari
     overflow: hidden;
     overflow: clip;
-    &.brandAlign{
-      text-align: left ;
-      align-items: flex-start ;
+    &.brandAlign {
+      text-align: left;
+      align-items: flex-start;
     }
     &.textContentBasis30 {
-      flex-basis: 30%; 
+      flex-basis: 30%;
     }
     &.textContentBasis40 {
       flex-basis: 40%;
@@ -81,8 +86,8 @@
   }
   .text {
     margin-top: 1rem;
+    
   }
-
   .image {
     display: flex;
     justify-content: center;
