Fix cookie settings button text color

--- a/styles/oneTrust.scss
+++ b/styles/oneTrust.scss
@@ -3,3 +3,7 @@
   background-color: $color-navy !important;
   border: 1px solid $color-navy !important;
 }
+
+#onetrust-pc-btn-handler {
+  color: $color-white !important;
+}
