--- a/components/layout/brandNavbar/brandNavbar.module.scss
+++ b/components/layout/brandNavbar/brandNavbar.module.scss
@@ -262,6 +262,7 @@
   top: 0;
   padding: 0;
   position: absolute;
+  pointer-events: none;
   .mainNavigation {
     position: absolute;
     transform: translateX(-100%);
@@ -278,6 +279,7 @@
     padding: initial;
     position: initial;
     animation: unset;
+    pointer-events: all;
   }
 }
 .disableAnimation {
