--- a/components/agility-pageModules/videoPopup/videoPopup.module.scss
+++ b/components/agility-pageModules/videoPopup/videoPopup.module.scss
@@ -98,6 +98,7 @@
       animation: fadein 750ms;
     }
     .closeButtonWrapper {
+      flex: 0 0 auto;
       button {
         height: 4rem;
         width: 4rem;
@@ -114,13 +115,14 @@
       }
     }
     .modalVideoWrapper {
-      flex-grow: 1;
+      flex: 1 1 auto;
       display: flex;
-      align-items: center;
-      padding: 4rem;
-      max-height: 100%;
+      justify-content: center;
+      padding: 2rem;
       > video {
         height: 100%;
+        width: auto;
+        max-width: 100%;
       }
       div:global(.unsupported-video) {
         p {
@@ -129,6 +131,9 @@
         > div {
           padding: 12.5%;
         }
+      }
+      @include desktop() {
+        padding: 4rem;
       }
     }
     @keyframes fadein {
