--- a/components/agility-pageModules/videoPopup/videoPopup.module.scss
+++ b/components/agility-pageModules/videoPopup/videoPopup.module.scss
@@ -40,7 +40,7 @@
             top: 0;
             left: 0;
             border-radius: 100%;
-            animation: pulse 1.5s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+            animation: pulsate 1.5s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
           }
           &::after {
             content: "";
@@ -56,14 +56,21 @@
             border-width: 0.6rem 0 0.6rem 0.75rem;
             box-sizing: border-box;
           }
-          @keyframes pulse {
+          @keyframes pulsate {
             0% {
               opacity: 1;
               box-shadow: 0px 0px 0px 0px rgba(17, 16, 19, 0.35);
             }
-            100% {
+            90% {
               opacity: 0;
               box-shadow: 0px 0px 0px 0.85rem rgba(17, 16, 19, 0.35);
+            }
+            99% {
+              opacity: 0;
+              box-shadow: 0px 0px 0px 0.85rem rgba(17, 16, 19, 0.35);
+            }
+            100% {
+              box-shadow: 0px 0px 0px 0px rgba(17, 16, 19, 0.35);
             }
           }
         }
