--- a/components/agility-pageModules/blankCards/blankCards.module.scss
+++ b/components/agility-pageModules/blankCards/blankCards.module.scss
@@ -205,11 +205,13 @@
 }
 .description {
   text-align: left;
+  margin-bottom: 0.625rem;
   @include desktop {
     position: absolute;
     max-width: 40%;
     right: 0;
     top: 0;
+    margin-bottom: 0;
   }
   font-weight: 400;
 }
