--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -42,9 +42,6 @@
     align-items: center;
     justify-content: center;
     .grid {
-      @include desktop{
-        margin-top:4rem;
-      }
       .gridItem {
         min-width: 0;
         min-height: max-content;
@@ -131,7 +128,7 @@
   .textItem {
     display: flex;
     padding: 1.5rem;
-    /* height: 100%; */
+    height: 100%;
     overflow: hidden;
   }
   &:not(.logoLeftHeaderRight) {
@@ -168,23 +165,13 @@
       }
       &.textItemWithLargeMedia {
         padding: 0;
-
         .textItemMedia {
-          overflow: hidden;
-          max-width: 100% !important;
           height: 14rem;
-          &.height100{
-            height:100% !important;
-          }
-          &.adjustHeight {
-            @include mobile {
-              height: initial;
-            }
-          }
+          overflow: hidden;
+          max-width: 100%;
           & > span:only-child img {
-            min-width: 100% !important;
             object-fit: cover;
-            margin: unset !important;
+            min-height: 100% !important;
           }
           .content,
           span.rightArrow {
@@ -281,11 +268,5 @@
         padding: 1.5rem 0;
       }
     }
-  }
-}
-.justify-content-flex-end {
-  justify-content: flex-end;
-  &.textItem {
-    height: 100%;
   }
 }
