--- a/brand/components/brandTextWithMedia/brandTextWithMedia.module.scss
+++ b/brand/components/brandTextWithMedia/brandTextWithMedia.module.scss
@@ -225,7 +225,7 @@
 
     div {
       &:only-child {
-        /*         height: 100%; */
+        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
