--- a/brand/components/brandTextGridWithMedia/brandTextGridWithMedia.module.scss
+++ b/brand/components/brandTextGridWithMedia/brandTextGridWithMedia.module.scss
@@ -42,12 +42,21 @@
     align-items: center;
     justify-content: center;
     .grid {
+      @include desktop {
+        margin-top: 4rem;
+      }
       .gridItem {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         min-width: 0;
         min-height: max-content;
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: 100%;
+        .textItem {
+          flex-basis: auto;
+        }
         @include grid-item-vertical-gap($smaller-gap);
       }
       &.hasLargerGap .gridItem {
@@ -128,7 +137,7 @@
   .textItem {
     display: flex;
     padding: 1.5rem;
-    height: 100%;
+    /* height: 100%; */
     overflow: hidden;
   }
   &:not(.logoLeftHeaderRight) {
@@ -165,13 +174,23 @@
       }
       &.textItemWithLargeMedia {
         padding: 0;
+
         .textItemMedia {
-          height: 14rem;
           overflow: hidden;
-          max-width: 100%;
+          max-width: 100% !important;
+          height: 14rem;
+          &.height100 {
+            height: 100% !important;
+          }
+          &.adjustHeight {
+            @include mobile {
+              height: initial;
+            }
+          }
           & > span:only-child img {
+            min-width: 100% !important;
             object-fit: cover;
-            min-height: 100% !important;
+            margin: unset !important;
           }
           .content,
           span.rightArrow {
@@ -268,5 +287,11 @@
         padding: 1.5rem 0;
       }
     }
+  }
+}
+.justify-content-flex-end {
+  justify-content: flex-end;
+  &.textItem {
+    height: 100%;
   }
 }
