--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -262,10 +262,15 @@
 /*
   <<<<<<<<<<<<<<<<GENERIC HELPER CLASSES>>>>>>>>>>>>>>>>>
 */
+.semi-bold{
+  font-weight:600;
+}
 .bold {
   font-weight: bold;
 }
-
+.extra-bold{
+  font-weight:800;
+}
 .b-r-30px {
   border-radius: toRem(30);
   overflow: hidden;
@@ -394,6 +399,18 @@
   padding-left: 1rem;
   padding-right: 1rem;
   overflow-wrap: break-word;
+}
+
+.reduce-list-padding-mobile{
+  @include mobile{
+    ul{
+      padding-lefT:0 ;
+      margin-lefT:0;
+      li{
+        margin-lefT:1.5rem;
+      }
+    }
+  }
 }
 
 // !important used here because these classes are meant for overriding default values
@@ -637,6 +654,9 @@
 }
 .max-width-narrow {
   @include narrowWidth();
+}
+.max-width-brand{
+    max-width:$brand;
 }
 .qmax-width-tablet {
   max-width: $tablet;
