feat: add layout class for object-fit: cover

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -284,6 +284,10 @@
   object-fit: fill !important;
 }
 
+.object-fit-contain img {
+  object-fit: contain !important;
+}
+
 .wrap {
   @include siteWidth();
   margin: 0 auto;
