--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -86,7 +86,7 @@
       & > * {
         max-width: 26.25rem;
         margin: 0 auto;
-        input,
+        input:not([type="submit"]),
         select {
           background-color: $color-white;
           margin: 0;
@@ -127,7 +127,8 @@
     & > * {
       flex-basis: 100%;
     }
-    form, .loader {
+    form,
+    .loader {
       display: grid;
       column-gap: 1rem;
       grid-template-columns: 1fr;
@@ -210,7 +211,7 @@
             }
           }
         }
-        input,
+        input:not([type="submit"]),
         select {
           background-color: $color-white !important;
           box-sizing: border-box;
@@ -218,6 +219,9 @@
         }
         label {
           margin: 0 0 0.25rem 0;
+        }
+        input[type="submit"] {
+          font-size: toRem(24);
         }
       }
     }
