Update PardotForm input outline styles

--- a/components/form/form.module.scss
+++ b/components/form/form.module.scss
@@ -24,6 +24,13 @@
   }
 }
 
+.pardotForm {
+  input,
+  select {
+    @include focus-visible-touch-outlines();
+  }
+}
+
 .required {
   color: $color-red;
   padding-right: toRem(5);
