Add cursor: pointer to PardotForm submit input

--- a/components/form/form.module.scss
+++ b/components/form/form.module.scss
@@ -29,6 +29,9 @@
   select {
     @include focus-visible-touch-outlines();
   }
+  input[type="submit"] {
+    cursor: pointer;
+  }
 }
 
 .required {
