--- a/components/form/form.module.scss
+++ b/components/form/form.module.scss
@@ -114,6 +114,22 @@
   padding-left: toRem(20);
 }
 
+.pt-3 {
+  padding-top: toRem(30);
+}
+
+.pb-2 {
+  padding-bottom: toRem(20);
+}
+
+.mt-3 {
+  margin-top: toRem(30);
+}
+
+.bt-1 {
+  border-top: toRem(1) solid $color-darkblue;
+}
+
 .copyright {
   font-size: toRem(14);
 }
