--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -21,7 +21,7 @@
     display: none;
   }
   .columnLayoutHeading {
-    order: 1;
+    order: 0;
   }
   .columnLayoutHeading,
   .rowLayoutHeading {
@@ -34,6 +34,18 @@
     h6 {
       &:last-child {
         margin-bottom: 0.7rem;
+      }
+    }
+  }
+  .columnLayoutHeading {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      &:nth-child(2) {
+        margin-top: toRem(10);
       }
     }
   }
@@ -86,7 +98,7 @@
       & > * {
         max-width: 26.25rem;
         margin: 0 auto;
-        input,
+        input:not([type="submit"]),
         select {
           background-color: $color-white;
           margin: 0;
@@ -121,13 +133,15 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+
     .bg-skyblue-light {
       background-color: transparent !important;
     }
     & > * {
       flex-basis: 100%;
     }
-    form, .loader {
+    form,
+    .loader {
       display: grid;
       column-gap: 1rem;
       grid-template-columns: 1fr;
@@ -178,7 +192,7 @@
     }
     // !important is used here to override some form styles because this layout has unique styles for it.
     .form {
-      margin-top: 1rem;
+      margin-top: 0;
       & > * {
         margin: 0 auto;
         max-width: 100vw;
@@ -210,7 +224,7 @@
             }
           }
         }
-        input,
+        input:not([type="submit"]),
         select {
           background-color: $color-white !important;
           box-sizing: border-box;
@@ -218,6 +232,9 @@
         }
         label {
           margin: 0 0 0.25rem 0;
+        }
+        input[type="submit"] {
+          font-size: toRem(24);
         }
       }
     }
