--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,6 +6,7 @@
 @import "typography";
 @import "marketo";
 @import "oneTrust";
+@import "recaptcha";
 @import "layout";
 @import "animations";
 @import "./components/__components-dir";
