Revert "Add narrow field option to PardotForm"
This reverts commit aa0364fac27eb9a98935d1e438353760276222ed.

--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -24,6 +24,18 @@
   &.bg-lightblue {
     background: $color-paleblue;
   }
+  form {
+    display: grid;
+    column-gap: 1rem;
+    grid-template-columns: 1fr;
+    div:last-of-type {
+      grid-column: 1 / -1;
+      text-align: center;
+    }
+    @include desktop() {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
   .formTitle {
     color: $color-black;
     font-weight: 400;
