--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -174,19 +174,21 @@
     }
   }
 
-  .primaryLink {
-    margin-top: 1rem;
-    margin-bottom: 1.2rem;
-    padding: 0.5em 2em;
-    border-radius: 3em;
-    border-width: 0.15em;
-  }
+  .primaryLink,
   .secondaryLink {
-    margin-top: 1rem;
-    margin-bottom: 1.2rem;
-    padding: 0.5em 2em;
-    border-radius: 3em;
-    border-width: 0.15em;
+    &.button {
+      margin-top: 1rem;
+      margin-bottom: 1.2rem;
+      padding: 0.5em 2em;
+      border-radius: 3em;
+      border-width: 0.15em;
+    }
+    &.textWithArrow {
+      display: block;
+      margin: 1rem 0 0 0;
+      padding: unset;
+      font-size: 1.1rem;
+    }
   }
   .imageLink {
     display: block;
@@ -196,9 +198,6 @@
     .textContent {
       text-align: unset;
       align-items: flex-start;
-    }
-    .primaryLink,
-    .secondaryLink {
     }
   }
 }
