--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -577,6 +577,9 @@
 .pt-0 {
   padding-top: 0 !important;
 }
+.pt-1px {
+  padding-top: 1px !important;
+}
 .pt-2 {
   padding-top: $size-2 !important;
 }
