--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -549,21 +549,45 @@
 // margin-block: selects both margin-top and margin-bottom
 .margin-block-1 {
   margin-block: $size-1 !important;
+  @supports not (margin-block: $size-1) {
+    margin-top: $size-1 !important;
+    margin-bottom: $size-1 !important;
+  }
 }
 .margin-block-2 {
   margin-block: $size-2 !important;
+  @supports not (margin-block: $size-2) {
+    margin-top: $size-2 !important;
+    margin-bottom: $size-2 !important;
+  }
 }
 .margin-block-3 {
   margin-block: $size-3 !important;
+  @supports not (margin-block: $size-3) {
+    margin-top: $size-3 !important;
+    margin-bottom: $size-3 !important;
+  }
 }
 .margin-block-4 {
   margin-block: $size-4 !important;
+  @supports not (margin-block: $size-4) {
+    margin-top: $size-4 !important;
+    margin-bottom: $size-4 !important;
+  }
 }
 .margin-block-5 {
   margin-block: $size-5 !important;
+  @supports not (margin-block: $size-5) {
+    margin-top: $size-5 !important;
+    margin-bottom: $size-5 !important;
+  }
 }
 .margin-block-6 {
   margin-block: $size-6 !important;
+  @supports not (margin-block: $size-6) {
+    margin-top: $size-6 !important;
+    margin-bottom: $size-6 !important;
+  }
 }
 
 .margin-center-horizontal {
@@ -629,24 +653,52 @@
 // padding-block: selects both padding-top and padding-bottom
 .padding-block-0 {
   padding-block: 0 !important;
+  @supports not (padding-block: 0) {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
 }
 .padding-block-1 {
   padding-block: $size-1 !important;
+  @supports not (padding-block: $size-1) {
+    padding-top: $size-1 !important;
+    padding-bottom: $size-1 !important;
+  }
 }
 .padding-block-2 {
   padding-block: $size-2 !important;
+  @supports not (padding-block: $size-2) {
+    padding-top: $size-2 !important;
+    padding-bottom: $size-2 !important;
+  }
 }
 .padding-block-3 {
   padding-block: $size-3 !important;
+  @supports not (padding-block: $size-3) {
+    padding-top: $size-3 !important;
+    padding-bottom: $size-3 !important;
+  }
 }
 .padding-block-4 {
   padding-block: $size-4 !important;
+  @supports not (padding-block: $size-4) {
+    padding-top: $size-4 !important;
+    padding-bottom: $size-4 !important;
+  }
 }
 .padding-block-5 {
   padding-block: $size-5 !important;
+  @supports not (padding-block: $size-5) {
+    padding-top: $size-5 !important;
+    padding-bottom: $size-5 !important;
+  }
 }
 .padding-block-6 {
   padding-block: $size-6 !important;
+  @supports not (padding-block: $size-6) {
+    padding-top: $size-6 !important;
+    padding-bottom: $size-6 !important;
+  }
 }
 
 .padding-unset {
