--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -180,3 +180,41 @@
     display: block;
   }
 }
+
+// Testimonial Style: Logo on left and text on right
+@include desktop() {
+  .clientTestimonial.logoOnLeft {
+    .textContent {
+      display: flex;
+      align-items: center;
+      flex-direction: row-reverse;
+      .companyName {
+        display: none;
+      }
+    }
+    .normal {
+      max-width: 100%;
+    }
+    .quote,
+    .client {
+      flex: 1;
+    }
+    .client {
+      display: flex;
+      flex-direction: column;
+      .logo {
+        order: 1;
+        margin: 0 auto 2rem auto;
+      }
+      & > * {
+        order: 2;
+      }
+    }
+
+    &.logoOnRight {
+      .textContent {
+        flex-direction: row;
+      }
+    }
+  }
+}
