chore: make vertical offset fix optional for TransparentizeNavbar

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -456,6 +456,13 @@
   }
 }
 
+.mt--navbar-height {
+  // helper class to fix the top offset when TransparentizeNavbar module is added to page
+  margin-top: calc(
+    0rem - ($navbar-height + $navbar-secondary-height)
+  ) !important;
+}
+
 .mb-0 {
   margin-bottom: 0 !important;
 }
