--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -188,8 +188,12 @@
       display: flex;
       align-items: center;
       flex-direction: row-reverse;
+      gap: 2em;
       .companyName {
         display: none;
+      }
+      .quote {
+        padding: 0 !important;
       }
     }
     .normal {
@@ -204,7 +208,7 @@
       flex-direction: column;
       .logo {
         order: 1;
-        margin: 0 auto 2rem auto;
+        margin: 0 auto;
       }
       & > * {
         order: 2;
