--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -193,7 +193,7 @@
         display: none;
       }
       .quote {
-        padding: 0;
+        padding: 0 2.5rem;
         font-weight: 400;
         font-size: 1.65rem;
       }
